force-app/main/default/objects/Master_LostType__c/Master_LostType__c.object-meta.xml
<CustomObject>
    <label>Master LostType</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master LostTypes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>