force-app/main/default/objects/Master_LostType__c/fields/Level1_Code__c.field-meta.xml
<CustomField>
    <fullName>Level1_Code__c</fullName>
    <label>Level1 Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>