force-app/main/default/objects/Master_LostType__c/fields/Level1_Type_Eng__c.field-meta.xml
<CustomField>
    <fullName>Level1_Type_Eng__c</fullName>
    <label>Level1 Type Eng</label>
    <length>255</length>
    <type>Text</type>
</CustomField>