force-app/main/default/objects/Master_LostType__c/fields/Level1_Type_Kor__c.field-meta.xml
<CustomField>
    <fullName>Level1_Type_Kor__c</fullName>
    <label>Level1 Type Kor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>