force-app/main/default/objects/Master_LostType__c/fields/Level2_Code__c.field-meta.xml
<CustomField>
    <fullName>Level2_Code__c</fullName>
    <label>Level2 Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>