force-app/main/default/objects/Master_LostType__c/fields/Level2_Type_Eng__c.field-meta.xml
<CustomField>
    <fullName>Level2_Type_Eng__c</fullName>
    <label>Level2 Type Eng</label>
    <length>255</length>
    <type>Text</type>
</CustomField>