force-app/main/default/objects/Master_LostType__c/fields/Lost_Drop_Type__c.field-meta.xml
<CustomField>
    <fullName>Lost_Drop_Type__c</fullName>
    <label>Lost/Drop Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Drop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>