force-app/main/default/objects/Master_LostType__c/fields/Type_Eng__c.field-meta.xml
<CustomField>
    <fullName>Type_Eng__c</fullName>
    <label>Type Eng</label>
    <length>255</length>
    <type>Text</type>
</CustomField>