force-app/main/default/objects/Master_LostType__c/fields/Type_Kor__c.field-meta.xml
<CustomField>
    <fullName>Type_Kor__c</fullName>
    <label>Type Kor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>