force-app/main/default/objects/Master_LostType__c/listViews/New.listView-meta.xml
<ListView>
    <fullName>New</fullName>
    <columns>Code__c</columns>
    <columns>NAME</columns>
    <columns>Level1_Type_Kor__c</columns>
    <columns>Level2_Type_Kor__c</columns>
    <columns>Type_Kor__c</columns>
    <columns>Lost_Drop_Type__c</columns>
    <columns>Order_Number__c</columns>
    <columns>Use__c</columns>
    <columns>Level2_Type_Eng__c</columns>
    <columns>Level1_Type_Eng__c</columns>
    <columns>Type_Eng__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lost_Drop_Type__c</field>
        <operation>equals</operation>
        <value>Lost,Drop</value>
    </filters>
    <label>New</label>
</ListView>